# mrtrix3

./: CMakeLists.txt  transformation_definition.xml  transformation_definition_with_all_possibilities.xml
src/gui/: crosshair_orientation.cpp  crosshair_orientation.h  projection.cpp  projection.h  pugixml.cpp  pugixml.hpp
src/gui/mrview/mode/: base.h  volume.cpp
src/gui/mrview/tool/tractography/: pugixml.cpp  tractogram.cpp  tractogram.h
src/gui/opengl/: shader.h
