cmake_minimum_required(VERSION 3.15)
project(mrtrix3)

set(CMAKE_CXX_STANDARD 98)

include_directories(core)
include_directories(core/adapter)
include_directories(core/algo)
include_directories(core/eigen_plugins)
include_directories(core/file)
include_directories(core/file/dicom)
include_directories(core/filter)
include_directories(core/fixel)
include_directories(core/fixel/legacy)
include_directories(core/formats)
include_directories(core/image_io)
include_directories(core/interp)
include_directories(core/math)
include_directories(core/math/stats)
include_directories(src)
include_directories(src/connectome)
include_directories(src/dwi)
include_directories(src/dwi/directions)
include_directories(src/dwi/sdeconv)
include_directories(src/dwi/tractography)
include_directories(src/dwi/tractography/ACT)
include_directories(src/dwi/tractography/algorithms)
include_directories(src/dwi/tractography/connectome)
include_directories(src/dwi/tractography/editing)
include_directories(src/dwi/tractography/GT)
include_directories(src/dwi/tractography/mapping)
include_directories(src/dwi/tractography/mapping/gaussian)
include_directories(src/dwi/tractography/resampling)
include_directories(src/dwi/tractography/seeding)
include_directories(src/dwi/tractography/SIFT)
include_directories(src/dwi/tractography/SIFT2)
include_directories(src/dwi/tractography/tracking)
include_directories(src/gui)
include_directories(src/gui/dialog)
include_directories(src/gui/dwi)
include_directories(src/gui/mrview)
include_directories(src/gui/mrview/mode)
include_directories(src/gui/mrview/tool)
include_directories(src/gui/mrview/tool/connectome)
include_directories(src/gui/mrview/tool/fixel)
include_directories(src/gui/mrview/tool/odf)
include_directories(src/gui/mrview/tool/roi_editor)
include_directories(src/gui/mrview/tool/tractography)
include_directories(src/gui/opengl)
include_directories(src/gui/shapes)
include_directories(src/gui/shview)
include_directories(src/registration)
include_directories(src/registration/metric)
include_directories(src/registration/transform)
include_directories(src/registration/warp)
include_directories(src/stats)
include_directories(src/surface)
include_directories(src/surface/algo)
include_directories(src/surface/filter)
include_directories(testing/src)

find_package(Qt5 REQUIRED COMPONENTS
        Core
        Gui
        Widgets
)

find_package (Eigen3 3.3 REQUIRED NO_MODULE)

add_executable(mrview
        cmd/mrview.cpp
        core/adapter/base.h
        core/adapter/extract.h
        core/adapter/gaussian1D.h
        core/adapter/gradient1D.h
        core/adapter/gradient3D.h
        core/adapter/jacobian.h
        core/adapter/median.h
        core/adapter/neighbourhood3D.h
        core/adapter/normalise3D.h
        core/adapter/permute_axes.h
        core/adapter/replicate.h
        core/adapter/reslice.cpp
        core/adapter/reslice.h
        core/adapter/subset.h
        core/adapter/warp.h
        core/algo/copy.h
        core/algo/histogram.cpp
        core/algo/histogram.h
        core/algo/iterator.h
        core/algo/loop.h
        core/algo/min_max.h
        core/algo/neighbourhooditerator.h
        core/algo/random_loop.h
        core/algo/random_threaded_loop.h
        core/algo/stochastic_threaded_loop.h
        core/algo/threaded_copy.h
        core/algo/threaded_loop.h
        core/eigen_plugins/array.h
        core/eigen_plugins/dense_base.h
        core/eigen_plugins/matrix.h
        core/file/dicom/csa_entry.h
        core/file/dicom/definitions.h
        core/file/dicom/dict.cpp
        core/file/dicom/element.cpp
        core/file/dicom/element.h
        core/file/dicom/image.cpp
        core/file/dicom/image.h
        core/file/dicom/mapper.cpp
        core/file/dicom/mapper.h
        core/file/dicom/patient.cpp
        core/file/dicom/patient.h
        core/file/dicom/quick_scan.cpp
        core/file/dicom/quick_scan.h
        core/file/dicom/select_cmdline.cpp
        core/file/dicom/series.cpp
        core/file/dicom/series.h
        core/file/dicom/study.cpp
        core/file/dicom/study.h
        core/file/dicom/tree.cpp
        core/file/dicom/tree.h
        core/file/config.cpp
        core/file/config.h
        core/file/copy.h
        core/file/entry.h
        core/file/gz.h
        core/file/json.h
        core/file/json_utils.cpp
        core/file/json_utils.h
        core/file/key_value.cpp
        core/file/key_value.h
        core/file/mgh.cpp
        core/file/mgh.h
        core/file/mmap.cpp
        core/file/mmap.h
        core/file/name_parser.cpp
        core/file/name_parser.h
        core/file/nifti1.h
        core/file/nifti1_utils.cpp
        core/file/nifti1_utils.h
        core/file/nifti2.h
        core/file/nifti2_utils.cpp
        core/file/nifti2_utils.h
        core/file/nifti_utils.cpp
        core/file/nifti_utils.h
        core/file/ofstream.cpp
        core/file/ofstream.h
        core/file/path.h
        core/file/tiff.cpp
        core/file/tiff.h
        core/file/utils.h
        core/filter/base.h
        core/filter/connected_components.h
        core/filter/dilate.h
        core/filter/dwi_brain_mask.h
        core/filter/erode.h
        core/filter/fft.h
        core/filter/gradient.h
        core/filter/mask_clean.h
        core/filter/median.h
        core/filter/normalise.h
        core/filter/optimal_threshold.h
        core/filter/resize.h
        core/filter/reslice.h
        core/filter/smooth.h
        core/filter/warp.h
        core/fixel/legacy/fixel_metric.h
        core/fixel/legacy/image.h
        core/fixel/legacy/keys.h
        core/fixel/helpers.h
        core/fixel/keys.h
        core/fixel/loop.h
        core/formats/analyse.cpp
        core/formats/dicom.cpp
        core/formats/list.cpp
        core/formats/list.h
        core/formats/mgh.cpp
        core/formats/mgz.cpp
        core/formats/mri.cpp
        core/formats/mrtrix.cpp
        core/formats/mrtrix_gz.cpp
        core/formats/mrtrix_sparse_legacy.cpp
        core/formats/mrtrix_utils.cpp
        core/formats/mrtrix_utils.h
        core/formats/nifti1.cpp
        core/formats/nifti1_gz.cpp
        core/formats/nifti2.cpp
        core/formats/nifti2_gz.cpp
        core/formats/pipe.cpp
        core/formats/ram.cpp
        core/formats/tiff.cpp
        core/formats/xds.cpp
        core/image_io/base.cpp
        core/image_io/base.h
        core/image_io/default.cpp
        core/image_io/default.h
        core/image_io/fetch_store.cpp
        core/image_io/fetch_store.h
        core/image_io/gz.cpp
        core/image_io/gz.h
        core/image_io/mosaic.cpp
        core/image_io/mosaic.h
        core/image_io/pipe.cpp
        core/image_io/pipe.h
        core/image_io/ram.cpp
        core/image_io/ram.h
        core/image_io/scratch.cpp
        core/image_io/scratch.h
        core/image_io/sparse.cpp
        core/image_io/sparse.h
        core/image_io/tiff.cpp
        core/image_io/tiff.h
        core/interp/base.h
        core/interp/cubic.h
        core/interp/linear.h
        core/interp/nearest.h
        core/interp/sinc.h
        core/math/stats/glm.cpp
        core/math/stats/glm.h
        core/math/stats/permutation.cpp
        core/math/stats/permutation.h
        core/math/stats/typedefs.h
        core/math/average_space.cpp
        core/math/average_space.h
        core/math/bessel.cpp
        core/math/bessel.h
        core/math/cauchy.h
        core/math/chebyshev.h
        core/math/check_gradient.h
        core/math/constrained_least_squares.h
        core/math/cubic_spline.h
        core/math/gaussian.h
        core/math/golden_section_search.h
        core/math/gradient_descent.h
        core/math/gradient_descent_bb.h
        core/math/hermite.h
        core/math/least_squares.h
        core/math/legendre.h
        core/math/math.h
        core/math/median.h
        core/math/quadratic_line_search.h
        core/math/rician.h
        core/math/rng.h
        core/math/sech.h
        core/math/SH.cpp
        core/math/SH.h
        core/math/sinc.h
        core/math/Sn_scale_estimator.h
        core/math/sphere.h
        core/math/versor.h
        core/math/ZSH.h
        core/app.cpp
        core/app.h
        core/apply.h
        core/axes.cpp
        core/axes.h
        core/bitset.cpp
        core/bitset.h
        core/cmdline_option.h
        core/command.h
        core/datatype.cpp
        core/datatype.h
        core/debug.h
        core/exception.cpp
        core/exception.h
        core/header.cpp
        core/header.h
        core/image.h
        core/image_diff.h
        core/image_helpers.h
        core/memory.h
        core/mrtrix.cpp
        core/mrtrix.h
        core/phase_encoding.cpp
        core/phase_encoding.h
        core/progressbar.cpp
        core/progressbar.h
        core/raw.h
        core/signal_handler.cpp
        core/signal_handler.h
        core/signals.h
        core/stats.cpp
        core/stats.h
        core/stride.cpp
        core/stride.h
        core/thread.cpp
        core/thread.h
        core/thread_queue.h
        core/timer.h
        core/transform.h
        core/types.h
        core/version.cpp
        matlab/read_mrtrix.m
        matlab/read_mrtrix_tracks.m
        matlab/write_mrtrix.m
        matlab/write_mrtrix_tracks.m
        src/connectome/connectome.cpp
        src/connectome/connectome.h
        src/connectome/enhance.cpp
        src/connectome/enhance.h
        src/connectome/lut.cpp
        src/connectome/lut.h
        src/connectome/mat2vec.h
        src/dwi/directions/file.cpp
        src/dwi/directions/file.h
        src/dwi/directions/mask.cpp
        src/dwi/directions/mask.h
        src/dwi/directions/predefined.cpp
        src/dwi/directions/predefined.h
        src/dwi/directions/set.cpp
        src/dwi/directions/set.h
        src/dwi/sdeconv/csd.cpp
        src/dwi/sdeconv/csd.h
        src/dwi/sdeconv/msmt_csd.h
        src/dwi/tractography/ACT/act.cpp
        src/dwi/tractography/ACT/act.h
        src/dwi/tractography/ACT/gmwmi.cpp
        src/dwi/tractography/ACT/gmwmi.h
        src/dwi/tractography/ACT/method.h
        src/dwi/tractography/ACT/shared.h
        src/dwi/tractography/ACT/tissues.h
        src/dwi/tractography/algorithms/calibrator.h
        src/dwi/tractography/algorithms/fact.h
        src/dwi/tractography/algorithms/iFOD1.h
        src/dwi/tractography/algorithms/iFOD2.cpp
        src/dwi/tractography/algorithms/iFOD2.h
        src/dwi/tractography/algorithms/nulldist.h
        src/dwi/tractography/algorithms/sd_stream.h
        src/dwi/tractography/algorithms/seedtest.h
        src/dwi/tractography/algorithms/tensor_det.h
        src/dwi/tractography/algorithms/tensor_prob.h
        src/dwi/tractography/connectome/connectome.cpp
        src/dwi/tractography/connectome/connectome.h
        src/dwi/tractography/connectome/exemplar.cpp
        src/dwi/tractography/connectome/exemplar.h
        src/dwi/tractography/connectome/extract.cpp
        src/dwi/tractography/connectome/extract.h
        src/dwi/tractography/connectome/mapped_track.h
        src/dwi/tractography/connectome/mapper.h
        src/dwi/tractography/connectome/matrix.cpp
        src/dwi/tractography/connectome/matrix.h
        src/dwi/tractography/connectome/metric.h
        src/dwi/tractography/connectome/streamline.h
        src/dwi/tractography/connectome/tck2nodes.cpp
        src/dwi/tractography/connectome/tck2nodes.h
        src/dwi/tractography/editing/editing.cpp
        src/dwi/tractography/editing/editing.h
        src/dwi/tractography/editing/loader.h
        src/dwi/tractography/editing/receiver.cpp
        src/dwi/tractography/editing/receiver.h
        src/dwi/tractography/editing/worker.cpp
        src/dwi/tractography/editing/worker.h
        src/dwi/tractography/GT/energy.h
        src/dwi/tractography/GT/externalenergy.cpp
        src/dwi/tractography/GT/externalenergy.h
        src/dwi/tractography/GT/gt.cpp
        src/dwi/tractography/GT/gt.h
        src/dwi/tractography/GT/internalenergy.cpp
        src/dwi/tractography/GT/internalenergy.h
        src/dwi/tractography/GT/mhsampler.cpp
        src/dwi/tractography/GT/mhsampler.h
        src/dwi/tractography/GT/particle.cpp
        src/dwi/tractography/GT/particle.h
        src/dwi/tractography/GT/particlegrid.cpp
        src/dwi/tractography/GT/particlegrid.h
        src/dwi/tractography/GT/particlepool.h
        src/dwi/tractography/GT/spatiallock.h
        src/dwi/tractography/mapping/gaussian/mapper.cpp
        src/dwi/tractography/mapping/gaussian/mapper.h
        src/dwi/tractography/mapping/gaussian/voxel.h
        src/dwi/tractography/mapping/buffer_scratch_dump.h
        src/dwi/tractography/mapping/fixel_td_map.cpp
        src/dwi/tractography/mapping/fixel_td_map.h
        src/dwi/tractography/mapping/loader.h
        src/dwi/tractography/mapping/mapper.cpp
        src/dwi/tractography/mapping/mapper.h
        src/dwi/tractography/mapping/mapper_plugins.cpp
        src/dwi/tractography/mapping/mapper_plugins.h
        src/dwi/tractography/mapping/mapping.cpp
        src/dwi/tractography/mapping/mapping.h
        src/dwi/tractography/mapping/twi_stats.cpp
        src/dwi/tractography/mapping/twi_stats.h
        src/dwi/tractography/mapping/voxel.cpp
        src/dwi/tractography/mapping/voxel.h
        src/dwi/tractography/mapping/writer.cpp
        src/dwi/tractography/mapping/writer.h
        src/dwi/tractography/resampling/arc.cpp
        src/dwi/tractography/resampling/arc.h
        src/dwi/tractography/resampling/downsampler.cpp
        src/dwi/tractography/resampling/downsampler.h
        src/dwi/tractography/resampling/endpoints.cpp
        src/dwi/tractography/resampling/endpoints.h
        src/dwi/tractography/resampling/fixed_num_points.cpp
        src/dwi/tractography/resampling/fixed_num_points.h
        src/dwi/tractography/resampling/fixed_step_size.cpp
        src/dwi/tractography/resampling/fixed_step_size.h
        src/dwi/tractography/resampling/resampling.cpp
        src/dwi/tractography/resampling/resampling.h
        src/dwi/tractography/resampling/upsampler.cpp
        src/dwi/tractography/resampling/upsampler.h
        src/dwi/tractography/seeding/base.h
        src/dwi/tractography/seeding/basic.cpp
        src/dwi/tractography/seeding/basic.h
        src/dwi/tractography/seeding/dynamic.cpp
        src/dwi/tractography/seeding/dynamic.h
        src/dwi/tractography/seeding/gmwmi.cpp
        src/dwi/tractography/seeding/gmwmi.h
        src/dwi/tractography/seeding/list.cpp
        src/dwi/tractography/seeding/list.h
        src/dwi/tractography/seeding/seeding.cpp
        src/dwi/tractography/seeding/seeding.h
        src/dwi/tractography/SIFT/fixel.h
        src/dwi/tractography/SIFT/gradient_sort.cpp
        src/dwi/tractography/SIFT/gradient_sort.h
        src/dwi/tractography/SIFT/model.h
        src/dwi/tractography/SIFT/model_base.h
        src/dwi/tractography/SIFT/output.h
        src/dwi/tractography/SIFT/proc_mask.cpp
        src/dwi/tractography/SIFT/proc_mask.h
        src/dwi/tractography/SIFT/sift.cpp
        src/dwi/tractography/SIFT/sift.h
        src/dwi/tractography/SIFT/sifter.cpp
        src/dwi/tractography/SIFT/sifter.h
        src/dwi/tractography/SIFT/track_contribution.cpp
        src/dwi/tractography/SIFT/track_contribution.h
        src/dwi/tractography/SIFT/track_index_range.cpp
        src/dwi/tractography/SIFT/track_index_range.h
        src/dwi/tractography/SIFT/types.h
        src/dwi/tractography/SIFT2/coeff_optimiser.cpp
        src/dwi/tractography/SIFT2/coeff_optimiser.h
        src/dwi/tractography/SIFT2/fixel.h
        src/dwi/tractography/SIFT2/fixel_updater.cpp
        src/dwi/tractography/SIFT2/fixel_updater.h
        src/dwi/tractography/SIFT2/line_search.cpp
        src/dwi/tractography/SIFT2/line_search.h
        src/dwi/tractography/SIFT2/reg_calculator.cpp
        src/dwi/tractography/SIFT2/reg_calculator.h
        src/dwi/tractography/SIFT2/regularisation.h
        src/dwi/tractography/SIFT2/streamline_stats.cpp
        src/dwi/tractography/SIFT2/streamline_stats.h
        src/dwi/tractography/SIFT2/tckfactor.cpp
        src/dwi/tractography/SIFT2/tckfactor.h
        src/dwi/tractography/tracking/early_exit.cpp
        src/dwi/tractography/tracking/early_exit.h
        src/dwi/tractography/tracking/exec.h
        src/dwi/tractography/tracking/generated_track.h
        src/dwi/tractography/tracking/method.cpp
        src/dwi/tractography/tracking/method.h
        src/dwi/tractography/tracking/shared.cpp
        src/dwi/tractography/tracking/shared.h
        src/dwi/tractography/tracking/tractography.cpp
        src/dwi/tractography/tracking/tractography.h
        src/dwi/tractography/tracking/types.h
        src/dwi/tractography/tracking/write_kernel.cpp
        src/dwi/tractography/tracking/write_kernel.h
        src/dwi/tractography/file.h
        src/dwi/tractography/file_base.cpp
        src/dwi/tractography/file_base.h
        src/dwi/tractography/properties.cpp
        src/dwi/tractography/properties.h
        src/dwi/tractography/rng.cpp
        src/dwi/tractography/rng.h
        src/dwi/tractography/roi.cpp
        src/dwi/tractography/roi.h
        src/dwi/tractography/scalar_file.h
        src/dwi/tractography/streamline.h
        src/dwi/tractography/weights.cpp
        src/dwi/tractography/weights.h
        src/dwi/bootstrap.h
        src/dwi/fixel_map.h
        src/dwi/fmls.cpp
        src/dwi/fmls.h
        src/dwi/gradient.cpp
        src/dwi/gradient.h
        src/dwi/noise_estimator.h
        src/dwi/shells.cpp
        src/dwi/shells.h
        src/dwi/tensor.h
        src/gui/dialog/dialog.cpp
        src/gui/dialog/dialog.h
        src/gui/dialog/dicom.cpp
        src/gui/dialog/dicom.h
        src/gui/dialog/file.cpp
        src/gui/dialog/file.h
        src/gui/dialog/image_properties.cpp
        src/gui/dialog/image_properties.h
        src/gui/dialog/list.cpp
        src/gui/dialog/list.h
        src/gui/dialog/opengl.cpp
        src/gui/dialog/opengl.h
        src/gui/dialog/progress.cpp
        src/gui/dialog/progress.h
        src/gui/dialog/report_exception.cpp
        src/gui/dialog/report_exception.h
        src/gui/dwi/render_frame.cpp
        src/gui/dwi/render_frame.h
        src/gui/dwi/renderer.cpp
        src/gui/dwi/renderer.h
        src/gui/mrview/mode/base.cpp
        src/gui/mrview/mode/base.h
        src/gui/mrview/mode/lightbox.cpp
        src/gui/mrview/mode/lightbox.h
        src/gui/mrview/mode/lightbox_gui.h
        src/gui/mrview/mode/list.h
        src/gui/mrview/mode/ortho.cpp
        src/gui/mrview/mode/ortho.h
        src/gui/mrview/mode/slice.cpp
        src/gui/mrview/mode/slice.h
        src/gui/mrview/mode/volume.cpp
        src/gui/mrview/mode/volume.h
        src/gui/mrview/tool/connectome/colourmap_observers.cpp
        src/gui/mrview/tool/connectome/colourmap_observers.h
        src/gui/mrview/tool/connectome/connectome.cpp
        src/gui/mrview/tool/connectome/connectome.h
        src/gui/mrview/tool/connectome/edge.cpp
        src/gui/mrview/tool/connectome/edge.h
        src/gui/mrview/tool/connectome/file_data_vector.cpp
        src/gui/mrview/tool/connectome/file_data_vector.h
        src/gui/mrview/tool/connectome/matrix_list.cpp
        src/gui/mrview/tool/connectome/matrix_list.h
        src/gui/mrview/tool/connectome/node.cpp
        src/gui/mrview/tool/connectome/node.h
        src/gui/mrview/tool/connectome/node_list.cpp
        src/gui/mrview/tool/connectome/node_list.h
        src/gui/mrview/tool/connectome/node_overlay.cpp
        src/gui/mrview/tool/connectome/node_overlay.h
        src/gui/mrview/tool/connectome/selection.cpp
        src/gui/mrview/tool/connectome/selection.h
        src/gui/mrview/tool/connectome/shaders.cpp
        src/gui/mrview/tool/connectome/shaders.h
        src/gui/mrview/tool/connectome/types.h
        src/gui/mrview/tool/fixel/base_fixel.cpp
        src/gui/mrview/tool/fixel/base_fixel.h
        src/gui/mrview/tool/fixel/directory.cpp
        src/gui/mrview/tool/fixel/directory.h
        src/gui/mrview/tool/fixel/fixel.cpp
        src/gui/mrview/tool/fixel/fixel.h
        src/gui/mrview/tool/fixel/image4D.cpp
        src/gui/mrview/tool/fixel/image4D.h
        src/gui/mrview/tool/fixel/legacy.cpp
        src/gui/mrview/tool/fixel/legacy.h
        src/gui/mrview/tool/fixel/vector_structs.h
        src/gui/mrview/tool/odf/item.cpp
        src/gui/mrview/tool/odf/item.h
        src/gui/mrview/tool/odf/model.cpp
        src/gui/mrview/tool/odf/model.h
        src/gui/mrview/tool/odf/odf.cpp
        src/gui/mrview/tool/odf/odf.h
        src/gui/mrview/tool/odf/preview.cpp
        src/gui/mrview/tool/odf/preview.h
        src/gui/mrview/tool/odf/type.h
        src/gui/mrview/tool/roi_editor/item.cpp
        src/gui/mrview/tool/roi_editor/item.h
        src/gui/mrview/tool/roi_editor/model.cpp
        src/gui/mrview/tool/roi_editor/model.h
        src/gui/mrview/tool/roi_editor/roi.cpp
        src/gui/mrview/tool/roi_editor/roi.h
        src/gui/mrview/tool/roi_editor/undoentry.cpp
        src/gui/mrview/tool/roi_editor/undoentry.h
        src/gui/mrview/tool/tractography/track_scalar_file.cpp
        src/gui/mrview/tool/tractography/track_scalar_file.h
        src/gui/mrview/tool/tractography/tractogram.cpp
        src/gui/mrview/tool/tractography/tractogram.h
        src/gui/mrview/tool/tractography/tractogram_enums.h
        src/gui/mrview/tool/tractography/tractography.cpp
        src/gui/mrview/tool/tractography/tractography.h
        src/gui/mrview/tool/base.cpp
        src/gui/mrview/tool/base.h
        src/gui/mrview/tool/list.h
        src/gui/mrview/tool/list_model_base.h
        src/gui/mrview/tool/overlay.cpp
        src/gui/mrview/tool/overlay.h
        src/gui/mrview/tool/screen_capture.cpp
        src/gui/mrview/tool/screen_capture.h
        src/gui/mrview/tool/view.cpp
        src/gui/mrview/tool/view.h
        src/gui/mrview/adjust_button.cpp
        src/gui/mrview/adjust_button.h
        src/gui/mrview/colourmap.cpp
        src/gui/mrview/colourmap.h
        src/gui/mrview/colourmap_button.cpp
        src/gui/mrview/colourmap_button.h
        src/gui/mrview/combo_box_error.cpp
        src/gui/mrview/combo_box_error.h
        src/gui/mrview/displayable.cpp
        src/gui/mrview/displayable.h
        src/gui/mrview/gui_image.cpp
        src/gui/mrview/gui_image.h
        src/gui/mrview/icons.h
        src/gui/mrview/spin_box.h
        src/gui/mrview/volume.cpp
        src/gui/mrview/volume.h
        src/gui/mrview/window.cpp
        src/gui/mrview/window.h
        src/gui/opengl/font.cpp
        src/gui/opengl/font.h
        src/gui/opengl/gl.cpp
        src/gui/opengl/gl.h
        src/gui/opengl/gl_core_3_3.cpp
        src/gui/opengl/gl_core_3_3.h
        src/gui/opengl/lighting.cpp
        src/gui/opengl/lighting.h
        src/gui/opengl/shader.cpp
        src/gui/opengl/shader.h
        src/gui/opengl/transformation.h
        src/gui/shapes/cube.cpp
        src/gui/shapes/cube.h
        src/gui/shapes/cylinder.cpp
        src/gui/shapes/cylinder.h
        src/gui/shapes/halfsphere.cpp
        src/gui/shapes/halfsphere.h
        src/gui/shapes/sphere.cpp
        src/gui/shapes/sphere.h
        src/gui/shview/icons.h
        src/gui/shview/render_window.cpp
        src/gui/shview/render_window.h
        src/gui/color_button.cpp
        src/gui/color_button.h
        src/gui/crosshair.cpp
        src/gui/crosshair.h
        src/gui/cursor.cpp
        src/gui/cursor.h
        src/gui/gui.cpp
        src/gui/gui.h
        src/gui/lighting_dock.cpp
        src/gui/lighting_dock.h
        src/gui/projection.cpp
        src/gui/projection.h
        src/registration/metric/cross_correlation.h
        src/registration/metric/demons.h
        src/registration/metric/demons4D.h
        src/registration/metric/difference_robust.h
        src/registration/metric/evaluate.h
        src/registration/metric/mean_squared.h
        src/registration/metric/normalised_cross_correlation.h
        src/registration/metric/params.h
        src/registration/metric/robust_estimators.h
        src/registration/metric/thread_kernel.h
        src/registration/transform/affine.cpp
        src/registration/transform/affine.h
        src/registration/transform/base.h
        src/registration/transform/convergence_check.cpp
        src/registration/transform/convergence_check.h
        src/registration/transform/initialiser.cpp
        src/registration/transform/initialiser.h
        src/registration/transform/initialiser_helpers.cpp
        src/registration/transform/initialiser_helpers.h
        src/registration/transform/reorient.h
        src/registration/transform/rigid.cpp
        src/registration/transform/rigid.h
        src/registration/transform/search.h
        src/registration/warp/compose.h
        src/registration/warp/convert.h
        src/registration/warp/helpers.h
        src/registration/warp/invert.h
        src/registration/linear.cpp
        src/registration/linear.h
        src/registration/multi_resolution_lmax.h
        src/registration/nonlinear.cpp
        src/registration/nonlinear.h
        src/stats/cfe.cpp
        src/stats/cfe.h
        src/stats/cluster.cpp
        src/stats/cluster.h
        src/stats/enhance.h
        src/stats/permstack.cpp
        src/stats/permstack.h
        src/stats/permtest.cpp
        src/stats/permtest.h
        src/stats/tfce.cpp
        src/stats/tfce.h
        src/surface/algo/image2mesh.h
        src/surface/algo/mesh2image.cpp
        src/surface/algo/mesh2image.h
        src/surface/filter/base.cpp
        src/surface/filter/base.h
        src/surface/filter/smooth.cpp
        src/surface/filter/smooth.h
        src/surface/filter/vertex_transform.cpp
        src/surface/filter/vertex_transform.h
        src/surface/freesurfer.cpp
        src/surface/freesurfer.h
        src/surface/mesh.cpp
        src/surface/mesh.h
        src/surface/mesh_multi.cpp
        src/surface/mesh_multi.h
        src/surface/polygon.cpp
        src/surface/polygon.h
        src/surface/scalar.cpp
        src/surface/scalar.h
        src/surface/types.h
        src/surface/utils.h
        src/exec_version.cpp
        src/exec_version.h
        src/min_mem_array.h
        src/wrap_r.h
        testing/cmd/testing_diff_dir.cpp
        testing/cmd/testing_diff_fixel.cpp
        testing/cmd/testing_diff_fixel_old.cpp
        testing/cmd/testing_diff_image.cpp
        testing/cmd/testing_diff_matrix.cpp
        testing/cmd/testing_diff_mesh.cpp
        testing/cmd/testing_diff_peaks.cpp
        testing/cmd/testing_diff_tck.cpp
        testing/cmd/testing_diff_tsf.cpp
        testing/cmd/testing_gen_data.cpp
        testing/src/diff_images.h
        src/gui/crosshair_orientation.cpp
        src/gui/crosshair_orientation.h)

target_link_libraries(mrview Qt5::Core Qt5::Gui Qt5::Widgets Eigen3::Eigen)
